# ingestor-tools

./: .env.example  .gitignore  ARCHITECTURE.md  PROMPT.md  README.md  label-stop-list.txt  pyproject.toml
memory/: 2026-03-04.md
src/: newsletter_organizer.py
tests/: test_organizer.py
